# simple-pbbg

./: Justfile  LICENSE  README.md
ai-sidecar/: .env  Cargo.toml  Justfile
ai-sidecar/docs/: DEV_NOTES.md
ai-sidecar/src/: api.rs  default_system_message.txt  history.rs  lib.rs  llm.rs  main.rs  prompt_template.txt  server.rs
ai-sidecar/src/api/: v1.rs
docs/: ARCHITECTURE.md
server/: Justfile  app_state.ts  auth.test.ts  auth.ts  date_util.test.ts  date_util.ts  deno.json  game.ts  logger.ts  main.ts  model.ts  rows.ts  user_util.ts
server/game/: game_state.test.ts  game_state.ts
server/migrations/: 000000_migration_setup.sql  000001_init.sql
server/model/: client_message.ts  client_message_internal.ts  game_message.ts  game_message_internal.ts
server/static/: index.html
