[package]
name = "ai-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.5"
axum = { version = "0.7.5", features = ["http2"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures-core = "0.3.30"
llama_cpp = "0.3.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout"] }
tower-http = { version = "0.5.2", features = ["add-extension", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["serde", "v7"] }
